@@ -1,5 +1,6 @@
 2010-09-01 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* added custom folder icon for direct mail sysfolder
+	* added icon sprites for pages icon
 
 2010-08-12 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* Bug #9252: deprecated ereg function (thanks to Gregor Hermens)
